# deg-hackathon-carbon-aware-compute

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
data/synthetic/: workloads.json
docs/: README.md
src/: config.py  launcher.py
src/beckn/: models.py  server.py
src/compute_agent/: __init__.py  agent.py  caco_compute_agent.toml
src/coordination_agent/: __init__.py  agent.py  caco_coordination_agent.toml
src/data_sources/: __init__.py  bmrs_client.py  carbon_intensity_client.py
src/domain/: __init__.py  models.py
src/grid_agent/: __init__.py  agent.py  caco_grid_agent.toml
src/logging/: __init__.py  csv_logger.py  schema.py
src/my_util/: __init__.py  my_a2a.py
src/optimization/: __init__.py  engine.py
src/wrappers/: __init__.py  llm_wrapper.py
